Switch to valueOf method